fix: mc4wp text alignments

--- a/frontend_bundler/client/app/styles/components/offset-nav.scss
+++ b/frontend_bundler/client/app/styles/components/offset-nav.scss
@@ -163,6 +163,10 @@
         &--html {
             .mc4wp-form {
                 text-align: center;
+
+                .custom-checkbox__options {
+                    text-align: left;
+                }
             }
         }
     }
